# si-protocols

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AUDIT-STAGE2.md  CLAUDE-internal.md.template  CLAUDE.md  LICENSE  README.md  cvp-ontology-v0.1.yaml  main.py  osv-scanner.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: main.py  schemas.py
docs/: CVP.md  DESIGN.md  ROADMAP.md  STACK.md  STRATEGY.md
examples/: corpus_en_benign_01.txt  corpus_en_benign_02.txt  corpus_en_benign_03.txt  corpus_en_extreme_01.txt  corpus_en_extreme_02.txt  corpus_en_high_01.txt  corpus_en_high_02.txt  corpus_en_high_03.txt  corpus_en_low_01.txt  corpus_en_low_02.txt  corpus_en_mid_01.txt  corpus_en_mid_02.txt  corpus_ja_benign_01.txt  corpus_ja_benign_02.txt  corpus_ja_benign_03.txt  corpus_ja_extreme_01.txt  corpus_ja_extreme_02.txt  corpus_ja_high_01.txt  corpus_ja_high_02.txt  corpus_ja_high_03.txt  corpus_ja_low_01.txt  corpus_ja_low_02.txt  corpus_ja_mid_01.txt  corpus_ja_mid_02.txt  corpus_manifest.json  synthetic_ambiguous_01.txt  synthetic_ambiguous_01_ja.txt  synthetic_ambiguous_02.txt  synthetic_ambiguous_02_ja.txt  synthetic_ambiguous_03.txt  synthetic_benign.txt  synthetic_escalation.txt  synthetic_suspicious.txt  synthetic_suspicious_ja.txt  synthetic_topology_suspicious.txt  synthetic_topology_suspicious_ja.txt  synthetic_tradition_markers.txt
scripts/: classification-gate.py  generate-og-images.py  post-sync.sh
site/: astro.config.mjs  package-lock.json  package.json
site-cc/: .npmrc  astro.config.mjs  package-lock.json  package.json
site-cc/public/: robots.txt
site-cc/src/: content.config.ts
site-cc/src/components/: Footer.astro  Header.astro
site-cc/src/layouts/: BaseLayout.astro  PageLayout.astro
site-cc/src/pages/: common-misconceptions.astro  common-threats.astro  cybersecurity-and-privacy.astro  egregores.astro  index.astro  mapping-claims-and-patterns.astro  the-virtualisation-model.astro  threat-modelling.astro  why-spiritual-intelligence-matters.astro
site-cc/src/styles/: global.css
site/public/: robots.txt
site/src/: content.config.ts
site/src/components/: Footer.astro  Header.astro  ThreatAnalyser.svelte
site/src/layouts/: BaseLayout.astro  BlogLayout.astro  DocsLayout.astro
site/src/pages/: demo.astro  index.astro
site/src/styles/: global.css
skills/: quick-check.md
src/si_protocols/: __init__.py  marker_registry.py  markers.py  markers_ja.py  output.py  threat_filter.py
src/si_protocols/topology/: __init__.py  anthropic_engine.py  cli.py  engine.py  output.py  (+5 more)
tests/: test_api.py  test_classification_gate.py  test_corpus.py  test_marker_registry.py  test_markers.py  test_markers_ja.py  test_output.py  test_threat_filter.py  test_topology_anthropic_engine.py  test_topology_builder.py  test_topology_cli.py  test_topology_ollama_engine.py  test_topology_rule_engine.py  test_topology_svg_renderer.py  test_topology_types.py
(+21 files in other folders)
