[project]
name = "si-protocols"
version = "0.1.0"
description = "Hybrid tech-psychic protocols for Spiritual Intelligence — open-source tools to detect and safeguard against disinformation in metaphysical narratives."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "lemur47" }]
keywords = ["spiritual-intelligence", "nlp", "disinformation", "consciousness"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "spacy>=3.8,<4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "ruff>=0.9",
    "bandit>=1.8",
    "pre-commit>=4.0",
    "httpx>=0.28",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
si-threat-filter = "si_protocols.threat_filter:main"

[project.urls]
Homepage = "https://spiritualintelligence.dev"
Repository = "https://github.com/lemur47/si-protocols"
Issues = "https://github.com/lemur47/si-protocols/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/si_protocols"]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (overlaps with standalone bandit — belt and braces)
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "S311",  # random — we use it intentionally for heuristic placeholders
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is expected in tests

[tool.ruff.lint.isort]
known-first-party = ["si_protocols"]

# --- Pyright ---
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# --- Coverage ---
[tool.coverage.run]
source = ["si_protocols"]

[tool.coverage.report]
show_missing = true
fail_under = 70

# --- Bandit ---
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]  # random — same rationale as ruff S311
